--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,16 +10,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand logo">Coder</a>
+            <a href="/" class="navbar-brand logo">GEEK HOUSE</a>
           </div>
           <nav class="collapse navbar-collapse" role="navigation">
             <ul class="nav navbar-nav navbar-right">
+            <% if user_signed_in? %>
+              <li class="round-image-50 dropdown"><%= image_tag(current_user.avatar.url(:thumb)) %></li>
+              <% end %>
               <li>
                 <a href="/"><i class="glyphicon glyphicon-home"></i></a>
               </li>
-              <% if user_signed_in? %>
-              <li class="round-image-50 dropdown"><%= image_tag(current_user.avatar.url(:thumb)) %></li>
-              <% end %>
+              
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle " data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i></a>
                 <ul class="dropdown-menu">
