--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,8 +4,16 @@
       <div class="column col-sm-12 col-xs-11" id="main">
         <div class="padding">
           <div class="full col-sm-9">
-            <h1>Home page</h1>
-            
+            <div class="col-sm-7">
+                <% @posts.each do |post| %>
+                <div class="panel panel-default">
+                  <div class="panel-heading"><h6>Posted by <%= post.user.username %> | <%=post.created_at%></h6></div>
+                  <div class="panel-body">
+                    <p><%= raw post.content %></p>
+                  </div>
+                </div>
+                <% end %>
+              </div>
           </div>
         </div>
       </div>
