--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,6 +10,7 @@
 								<div class="panel panel-default">
 									<li class="round-image-50 dropdown"><%= image_tag(user.avatar.url(:thumb)) %></li>
 									<div class="panel-heading"><h6><%= user.username %></h6></div>
+									<div class="panel-heading"><p><%= user.about %></p></div>
 								</div>
 								<% end %>
 							</div>
