--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,8 +15,13 @@
 										<p>
 										  <%= image_tag(current_user.avatar.url(:thumb)) %>
 										</p>
-										<h4><%= full_name %></h4>
-										<h5><%= @user.username %></5>
+										<h4>Full Name: <%= full_name %></h4>
+										<h5>Username: <%= @user.username %></5>
+										<hr>
+										<div class="about">
+										    <h5>About Me:</h5>
+											<p><%= @user.about %></p>
+										</div>
 										<p>45 Followers, <span><%= pluralize(current_user.posts.count, "Post") %></span></p>
 									</div>
 								</div>
@@ -31,6 +36,7 @@
 										<%= f.button :submit, class: 'btn btn-primary pull-right' %>
 										<ul class="list-inline">
 											<li><a href=""><i class="glyphicon glyphicon-upload"></i></a></li>
+											<%= f.file_field :image %>
 										</ul>
 									</form>
 								</div>
@@ -41,19 +47,15 @@
 							<div class="col-sm-7">
 								<% @posts.each do |post| %>
 								<div class="panel panel-default">
-									<div class="panel-heading"><h6>Posted by <%= @user.username %></h6></div>
+									<div class="panel-heading"><h6>Posted by <%= @user.username %> | <%=post.created_at%></h6></div>
 									<div class="panel-body">
-										<p><%= truncate(post.content, length: 350, escape: false) %></p>
-										
+										<p><%= raw post.content %></p>
 									</div>
+									<%if post.user_id == current_user.id%>
+									<%= link_to ('<span class="glyphicon glyphicon-remove"></span>').html_safe, post, method: :delete, data: { confirm: 'Are you sure you want to delete this post?' }  %>
+									<% end %>
 								</div>
 								<% end %>
-							</div>
-							
-							<div class="row">
-								<div class="col-sm-6">
-									<a href="#">Twitter</a> <small class="text-muted">|</small> <a href="#">Facebook</a> <small class="text-muted">|</small> <a href="#">Google+</a>
-								</div>
 							</div>
 							
 							<div class="row" id="footer">
