--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -337,30 +337,33 @@ small.text-muted {
 
 /*// Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) { 
-  .navbar-collapse {
-    overflow-x: visible;
-    padding-right: 15px;
-    padding-left: 15px;
-    border-top: 1px solid transparent;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    -webkit-overflow-scrolling: touch;
-}
+  .col-sm-5 {
+    width: 100%;
+  }
+  .col-sm-7 {
+    width: 100%;
+  }
  }
 
 /*// Medium devices (tablets, 768px and up)*/
-@media (min-width: 768px) { 
-  .navbar-collapse {
-    overflow-x: visible;
-    padding-right: 15px;
-    padding-left: 15px;
-    border-top: 1px solid transparent;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    -webkit-overflow-scrolling: touch;
-}
+@media (min-width: 768px) {
+  .col-sm-5 {
+    width: 100%;
+  }
+  .col-sm-7 {
+    width: 100%;
+  }
  }
 
 /*// Large devices (desktops, 992px and up)*/
-@media (min-width: 992px) { ... }
+@media (min-width: 992px) {
+  .col-sm-5 {
+    width: 41.66666667%;
+}
+.col-sm-7 {
+    width: 58.33333333%;
+}
+}
 
 /*// Extra large devices (large desktops, 1200px and up)*/
 @media (min-width: 1200px) { ... }
