--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
               <li class="round-image-50 dropdown"><%= image_tag(current_user.avatar.url(:thumb)) %></li>
               <% end %>
               <li>
-                <a href="/"><i class="glyphicon glyphicon-home"></i></a>
+                <a href="/"><i class="fa fa-home"></i></a>
               </li>
               
                   <% if user_signed_in? %>
