--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,17 +27,15 @@
 								</div>
 								
 								<div class="well">
-									<%= simple_form_for(@user_post) do |f| %>
+									<%= simple_form_for @user_post, html: { multipart: true } do |f| %>
 									<%= f.error_notification %>
 									<form class="form-horizontal" role="form">
 										<div class="form-group" style="padding:14px;">
 											<%= f.text_area :content, placeholder: "What's New.......", class: "form-control" %>
+											<%= f.file_field :image %>
 										</div>
 										<%= f.button :submit, class: 'btn btn-primary pull-right' %>
-										<ul class="list-inline">
-											<li><a href=""><i class="glyphicon glyphicon-upload"></i></a></li>
-											<%= f.file_field :image %>
-										</ul>
+										
 									</form>
 								</div>
 								<% end %>
@@ -50,6 +48,7 @@
 									<div class="panel-heading"><h6>Posted by <%= @user.username %> | <%=post.created_at%></h6></div>
 									<div class="panel-body">
 										<p><%= raw post.content %></p>
+										<%= image_tag post.image.url(:medium), class: "image-post" %>
 									</div>
 									<%if post.user_id == current_user.id%>
 									<%= link_to ('<span class="glyphicon glyphicon-remove"></span>').html_safe, post, method: :delete, data: { confirm: 'Are you sure you want to delete this post?' }  %>
